--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,31 @@ services:
   app:
     build:
       context: .
+      dockerfile: Dockerfile  # Specify Dockerfile if it's named differently
     ports:
       - "8000:8000"
     volumes:
       - ./app:/app
     command: >
-      sh -c "python manage.py runserver"
+      sh -c "python3 manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=devdb
+      - DB_USER=root
+      - DB_PASS=1234
+    depends_on:
+      - db
+
+  db:
+    image: postgres:alpine3.20
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=devdb
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=1234
+
+
+volumes:
+  db-data:
+  dev-static-data:
